# Learning_C_CPP

./: .gitignore  CMakeLists.txt
Apps_For_Stepik_Course/A_and_B_states_depending_on_R_T_S/: baseLogicBlocks.c  baseLogicBlocks.h  debugFunctions.c  detectionLogic.c  detectionLogic.h  inputPreparation.c  inputPreparation.h  main.c  types.h
Apps_For_Stepik_Course/C++Programming_Base/: CMakeLists.txt
Apps_For_Stepik_Course/C++Programming_Base/_1_Introduction/: Logarithm.cpp
Apps_For_Stepik_Course/C++Programming_Base/_2_Basics/: RecursiveReverse.cpp  StringLength.cpp
Apps_For_Stepik_Course/C++Programming_Base/_3_Structs_Classes/: Classes.cpp  ClassesInDynamicMemory.cpp  ClassesInDynamicMemory.hpp  Cls.cpp  Destructors.cpp
Apps_For_Stepik_Course/C++Programming_Base/_4_OOP/: Overloading.cpp  VMTestTask.cpp
Apps_For_Stepik_Course/C++Programming_Base/_5_AdditionalAbilities/: Friend.cpp  GlobalVariables.cpp  SharedPtr.cpp  StringNested.cpp  TaskRational1.cpp  UniquePtr.cpp
Apps_For_Stepik_Course/C++Programming_Base/_6_Templates/: ArrayTemplate2.cpp  ComplexTemplates.cpp  CopyWithTemplates.cpp  CopyWithTemplates.hpp  DependentNames.cpp  FunctionTemplates.cpp  LessFromLecture.cpp  SimpleTemplates.cpp  StringContainerCreator.cpp  TaskFlattenArray.cpp  TaskFlattenArray.hpp  Task_ArraySize.cpp  Task_FindMinimum.cpp  Task_FindMinimum.hpp  Task_TemplateMinimum.cpp  Task_TemplateMinimum.hpp  Task_ValueHolder.cpp  Task_ValueHolder.hpp  TemplateSpecialization.cpp  TemplateSpecialization.hpp  UnusualTemplates.cpp
Apps_For_Stepik_Course/C++Programming_Continuation/: CMakeLists.txt  challenge-reverse-forward-list.cpp
Apps_For_Stepik_Course/C++Programming_Continuation/_1_/: CStyleTypeCasting.cpp  ConstCast.cpp  Corteges.cpp  DynamicCast.cpp  FunctionPointer.cpp  PluralInheritance.cpp  RTTI.cpp  ReinterpretCast.cpp  StaticCast.cpp  Task_D1BaseToD2Base.cpp  Task_ManBearPig.cpp  Task_StaticCast.cpp  Task_Tuple.cpp  VirtualInheritance.cpp
Apps_For_Stepik_Course/C++Programming_Continuation/_1_AdvancedFeatures/: DynamicCast.cpp  FieldPointers.cpp  Listener.cpp  MethodPointerOffset.cpp  MethodPointers.cpp  MultiMethods.cpp  Namespaces.cpp  PluralInheritance.cpp  RTTI.cpp  SampleOfParser.cpp  SampleOfPthreads.cpp  StructPointersResume.cpp  Task_Compare.cpp  Task_ConstCast.cpp  Task_Header.hpp  Task_Header1.cpp  Task_Header2.cpp  Typedefs.cpp  VirtualInheritance.cpp
Apps_For_Stepik_Course/C++Programming_Continuation/_2_NewFeaturesOf11And14/: C++11AndC++14.cpp  Constexpr.cpp  ConstructorDelegation.cpp  Decltype.cpp  DefaultAndDelete.cpp  InitializationLists.cpp  LambdaExpressions.cpp  MoveInsteadCopy.cpp  NewEnums.cpp  NewStringLiterals.cpp  OverrideAndFinal.cpp  RangeBasedForLoop.cpp  StdFunction.cpp  Task_Constexpr.cpp  Task_FindIf.cpp  Task_ForEach.cpp  Task_MoveArray.cpp  Task_PrintValues.cpp  Task_Tuple.cpp  UniversalInitialization.cpp  VarArgTemplates.cpp
Apps_For_Stepik_Course/C++Programming_Continuation/_3_StandardTemplateLibrary/: Algorithms.cpp  AssociativeContainers.cpp  AssotiativeContainers.cpp  Iterators.cpp  ModifyingAlgorithms.cpp  NewUnorderedContainers.cpp  SequentialContainers.cpp  Task_Insertion.cpp  Typename.cpp  input.txt
Apps_For_Stepik_Course/C++Programming_Continuation/_4_ErrorProcessing/: Task_StringNoexcept.cpp  Task_WhichError.cpp  Test_ConstructorDestructor.cpp  Test_StaticAssert.cpp
Apps_For_Stepik_Course/Macros_in_CPP/: ArrayShift.cpp  CMakeLists.txt  Classes.cpp  Cls.cpp  Concatenation.cpp  ConstantLinks.cpp  ConstantMethods.cpp  Constants.cpp  ConstructorsDestructors.cpp  CopyingConstructor.cpp  ExternVariables.cpp  Factorial.cpp  Fibonacci.cpp  Friend.cpp  Friend.h  GetLine.cpp  GreatestCommonDivisor.cpp  IO.cpp  Inheritance.cpp  InheritanceModifiers.cpp  IntArrayFinalVersion.cpp  Logarithm.cpp  Macro_MAX.cpp  MyString.cpp  MyStringInherited.cpp  MyStringNested.cpp  Operators.cpp  OperatorsOverloading.cpp  Overloading.cpp  Pointers.cpp  QuadraticEquation.cpp  Recize.cpp  ScopedPtr.cpp  ScopedPtr.hpp  SharedPtr.cpp  SharedPtr.hpp  SimplePointer.cpp  SimplePointer.hpp  SimplestSmartPointer.cpp  SimplestSmartPointer.hpp  (+22 more)
Apps_For_Stepik_IntroToCompArch/A_and_B_states_depending_on_R_T_S/: debugFunctions.c  debugFunctions.h  main.c  (+2 more)
Exercises_From_KR_Book/: CMakeLists.txt  challenge-reverse-forward-list.c
Exercises_From_KR_Book/chapter-1/: task-1-10-alt.c  task-1-10.c  task-1-12.c  task-1-13.c  task-1-2.c  task-1-3-float-while.c  task-1-8.c  task-1-9.c
Exercises_From_KR_Book/chapter-1/1-printf/: task-1-1.c  task-1-2.c
Exercises_From_KR_Book/chapter-1/2-degrees-conversion/: task-1-15.c  task-1-3-float-while-header.c  task-1-3-float-while.c  task-1-3-int-for.c  task-1-3-int-while.c  task-1-4.c  task-1-5-define.c  task-1-5.c
Exercises_From_KR_Book/chapter-1/3-getchar-putchar/: sample-1-5-1-file-copying-1.c  sample-1-5-1-file-copying-2.c  sample-1-5-1-file-copying.c  sample-1-5-2-character-count-1.c  sample-1-5-2-character-count-2.c  sample-1-5-3-lines-counting.c  sample-1-5-4-counting-everything.c  task-1-10-alt.c  task-1-10.c  task-1-11.c  task-1-12.c  task-1-6.c  task-1-7.c  task-1-8.c  task-1-9.c
Exercises_From_KR_Book/chapter-1/4-arrays/: sample-1-10-find-longest-line.c  sample-1-6.c  sample-1-9-find-longest-line.c  task-1-13.c  task-1-14-char-frequency-histogram.c  task-1-16-find-longest-line-safe.c  task-1-17-print-line-over-limit.c  task-1-18-remove-ending-spaces.c  task-1-18.c  task-1-19-string-reverse.c
Exercises_From_KR_Book/chapter-1/task-1-11/: main.c
Exercises_From_KR_Book/chapter-1/task-1-3/: main-float-while-header.c
Exercises_From_KR_Book/chapter-1/task-1-7/: main.c
Exercises_From_KR_Book/chapter-1/task-1-8/: main.c
Exercises_From_KR_Book/chapter-2/: sample-2-5-leap-year-formula.c  sample-2-7-2-to-lower-case-conversion.c  sample-2-7-3-random.c  sample-2-7-string-to-int-conversion.c  sample-2-8-squeeze-string.c  sample-2-8-strcat.c  sample-2-9-bitwise-operations.c  task-2-1-type-limits.c  task-2-2-for-without-AND-and-OR.c  task-2-3-from-HEX-to-INT.c  task-2-4-filter-string-by-string.c  task-2-5-find-first-any-character.c
(+47 files in other folders)
