cmake_minimum_required(VERSION 3.15)
project(C++Programming_Base)

set(CMAKE_CXX_STANDARD 14)

add_executable(_6_Templates
        _6_Templates/Task_TemplateMinimum.cpp _6_Templates/Task_TemplateMinimum.hpp)
#        _6_Templates/TemplateSpecialization.cpp
#        _6_Templates/TemplateSpecialization.hpp)
#        _6_Templates/LessFromLecture.cpp)
#        _6_Templates/CopyWithTemplates.cpp)
#        _6_Templates/FunctionTemplates.cpp)
#        _6_Templates/ArrayTemplate2.cpp
#        _6_Templates/ArrayTemplate2.hpp)